More usage of List/Set.of
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>

Change-Id: I7d91dfc939030d928da99c753684c816ecb626de